--- a/index.html.html
+++ b/index.html.html
@@ -12,7 +12,7 @@
 <body>
     <h1>vide Game</h1>
 
-    <h2>playstation 5</h2>   
+    <h2>Playstation 5</h2>   
 
     <!--<p id="descrição-pc">Um baita video game </p>
     <p>R$ 5000.00</p>
@@ -22,10 +22,10 @@
     <p id="descrição-game"> PC pra ninguém botar defeito</p>
     <p>R$ 15000,00</p>--> 
 
-<p class="descrição-produto promoçao ">um baita video game </p>
+<p class="descrição-produto promoçao ">um baita video Game </p>
 <p>R$ 6000,00</p>
 
-<h2> pc cm led boladão</h2>
+<h2> pc cm led Boladão</h2>
 
 
 <p class="descrição-produto"> um pc pra ninguém botar defeito</p>
